Fixed signoff validation, layout bugs

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,8 +2,10 @@ html { background-color: #EEE; }
 
 body {
   font-family: 'Alegreya Sans', sans-serif;
+  font-size: 12pt;
   font-weight: 500;
   min-width: 1050px;
+  overflow-x: hidden
 }
 
 header {
